--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ hyper-tls = "0.5.0"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3.13"
 base64 = "0.13.0"
+async-trait = "0.1.50"
 [dev-dependencies]
 dotenv = "0.15.0"
 dotenv_codegen = "0.15.0"
